Vista de Transaccion

--- a/src/main/webapp/paginas/Transaccion.xhtml
+++ b/src/main/webapp/paginas/Transaccion.xhtml
@@ -98,7 +98,7 @@
                         <f:selectItem itemLabel="USD" itemValue="USD"/>
                     </p:selectOneMenu>
 
-                    <!-- muestra el archivo cargado del que proviene la transaccion -->
+                    <!-- muestra el archivo cargado de donde proviene la transaccion -->
                     <h:outputLabel value="Archivo Origen:"/>
                     <p:inputText value="#{transaccionFrm.registro.archivoCargado != null ? transaccionFrm.registro.archivoCargado.nombreArchivo : ''}"
                                  readonly="true"/>
