Se actualizó la interfaz de usuario

--- a/src/main/webapp/resources/ues/botones-crud.xhtml
+++ b/src/main/webapp/resources/ues/botones-crud.xhtml
@@ -20,28 +20,41 @@
         </cc:interface>
 
         <cc:implementation>
-            <h:panelGrid columns="3" style="margin-top:1rem; text-align:right;">
+            <!-- Contenedor de botones CRUD con diseño moderno -->
+            <div class="crud-buttons-container">
+                <!-- Botón Guardar (CREAR) -->
                 <p:commandButton value="Guardar"
                                  icon="pi pi-save"
                                  actionListener="#{cc.attrs.formulario.btnGuardarHandler}"
                                  rendered="#{cc.attrs.formulario.estado == 'CREAR'}"
                                  update="#{cc.attrs.actualizar}"
-                                 styleClass="ui-button-success"/>
+                                 styleClass="btn-crud btn-crud-save"/>
 
+                <!-- Botón Modificar (MODIFICAR) -->
                 <p:commandButton value="Modificar"
                                  icon="pi pi-pencil"
                                  actionListener="#{cc.attrs.formulario.btnModificarHandler}"
                                  rendered="#{cc.attrs.formulario.estado == 'MODIFICAR'}"
                                  update="#{cc.attrs.actualizar}"
-                                 styleClass="ui-button-warning"/>
+                                 styleClass="btn-crud btn-crud-edit"/>
 
+                <!-- Botón Eliminar (MODIFICAR) -->
                 <p:commandButton value="Eliminar"
                                  icon="pi pi-trash"
                                  actionListener="#{cc.attrs.formulario.btnEliminarHandler}"
                                  rendered="#{cc.attrs.formulario.estado == 'MODIFICAR'}"
                                  update="#{cc.attrs.actualizar}"
-                                 styleClass="ui-button-danger"/>
-            </h:panelGrid>
+                                 styleClass="btn-crud btn-crud-delete"
+                                 onclick="return confirm('¿Está seguro que desea eliminar este registro?');"/>
+
+                <!-- Botón Cancelar (siempre visible) -->
+                <p:commandButton value="Cancelar"
+                                 icon="pi pi-times"
+                                 actionListener="#{cc.attrs.formulario.btnCancelarHandler}"
+                                 update="#{cc.attrs.actualizar}"
+                                 styleClass="btn-crud btn-crud-cancel"
+                                 immediate="true"/>
+            </div>
         </cc:implementation>
     </ui:composition>
 </ui:component>
