--- a/src/main/webapp/WEB-INF/plantilla/default.xhtml
+++ b/src/main/webapp/WEB-INF/plantilla/default.xhtml
@@ -9,45 +9,74 @@
 
 <h:head>
     <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Sistema Contable UES</title>
 
-    <h:outputStylesheet library="css" name="style.css"/>
+    <h:outputStylesheet library="css" name="sistema-contable.css"/>
+
+    <link rel="stylesheet" href="https://unpkg.com/primeicons@6.0.1/primeicons.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
 
     <link rel="icon" type="image/png" href="#{resource['imagenes/pexels-sash2s-16886249.jpg']}"/>
 </h:head>
 
-
 <h:body>
     <f:view locale="es">
         <main class="app">
+            <!-- Header mejorado SIN Usuario -->
+            <header class="app-header">
+                <div class="header-inner">
+                    <div class="brand">
+                        <div class="logo">
+                            <i class="fas fa-calculator"></i>
+                        </div>
+                        <div class="brand-text">
+                            <h1>
+                                <ui:insert name="header">
+                                    Sistema Contable UES
+                                </ui:insert>
+                            </h1>
+                            <span class="brand-subtitle">Gestión Financiera Profesional</span>
+                        </div>
+                    </div>
 
+                    <div class="header-actions">
+                        <!-- ELIMINADO: user-info -->
+                        <a href="#{request.contextPath}/index.jsp" class="btn-icon" title="Inicio">
+                            <i class="fas fa-home"></i>
+                        </a>
+                    </div>
+                </div>
+            </header>
+
+            <!-- Contenido principal -->
             <div class="content">
-                <header>
-                    <ui:insert name="header">
-                        <h1>Sistema Contable UES</h1>
-                    </ui:insert>
-                </header>
-
-                <article class="panel">
-                    <h:panelGroup id="pnlTabla">
+                <div class="container">
+                    <h:panelGroup id="pnlTabla" styleClass="content-section">
                         <ui:insert name="contenido-tabla"/>
                     </h:panelGroup>
 
-                    <h:panelGroup id="pnlDetalle">
+                    <h:panelGroup id="pnlDetalle" styleClass="content-section">
                         <ui:insert name="contenido-detalle"/>
                     </h:panelGroup>
-                </article>
 
-                <ui:insert name="extra"/>
+                    <ui:insert name="extra"/>
+                </div>
             </div>
 
-            <footer>
-                Facultad Multidisciplinaria de Occidente - Universidad de El Salvador © 2025
+            <!-- Footer -->
+            <footer class="app-footer">
+                <div class="footer-content">
+                    <div class="footer-left">
+                        <i class="fas fa-university"></i>
+                        <strong>Facultad Multidisciplinaria de Occidente</strong>
+                    </div>
+                    <div class="footer-right">
+                        Universidad de El Salvador © 2025
+                    </div>
+                </div>
             </footer>
         </main>
-
-
-
     </f:view>
 </h:body>
 </html>
