--- a/src/main/webapp/paginas/archivoCargado.xhtml
+++ b/src/main/webapp/paginas/archivoCargado.xhtml
@@ -7,217 +7,116 @@
         xmlns:ues="jakarta.faces.composite/ues"
         template="/WEB-INF/plantilla/default.xhtml">
 
+    <!-- Notas: filtrado por periodos implementado en backend (TransaccionDAO). La vista de filtrado fue removida
+         por petición del usuario; el bean mantiene solo funcionalidad de archivos (subir/editar/eliminar). -->
+
     <!-- ===================== HEADER ===================== -->
     <ui:define name="header">
-        Carga de Archivos Contables
+        <h1><i class="pi pi-upload" style="margin-right:10px;"></i> Carga de Archivos Contables</h1>
     </ui:define>
 
     <!-- ===================== TABLA ===================== -->
     <ui:define name="contenido-tabla">
         <h:form id="frmTablaArchivos">
-            <p:growl id="msgsTabla" showDetail="true" life="3000" sticky="false"/>
+            <p:growl id="msgsTabla" showDetail="true" life="3000"/>
 
-            <!-- Wrapper para título + tabla -->
-            <div class="table-wrapper">
-                <div class="table-title">
-                    <i class="pi pi-upload"></i>
-                    Carga de Archivos Contables
-                </div>
+            <p:dataTable id="tablaArchivos"
+                         value="#{archivoCargadoFrm.modelo}"
+                         var="a"
+                         paginator="true"
+                         rows="8"
+                         rendered="#{archivoCargadoFrm.estado == 'NADA'}"
+                         selectionMode="single"
+                         selection="#{archivoCargadoFrm.registro}"
+                         rowKey="#{a.id}"
+                         paginatorPosition="bottom"
+                         emptyMessage="No se encontraron archivos cargados."
+                         styleClass="tabla-crud">
 
-                <div class="table-container">
-                    <p:dataTable id="tablaArchivos"
-                                 value="#{archivoCargadoFrm.modelo}"
-                                 var="a"
-                                 paginator="true"
-                                 rows="8"
-                                 rendered="#{archivoCargadoFrm.estado == 'NADA'}"
-                                 selectionMode="single"
-                                 selection="#{archivoCargadoFrm.registro}"
-                                 rowKey="#{a.id}"
-                                 paginatorPosition="bottom"
-                                 emptyMessage="No se encontraron archivos cargados.">
+                <p:ajax event="rowSelect" listener="#{archivoCargadoFrm.seleccionarRegistro}"
+                        update=":pnlDetalle :pnlTabla"/>
 
-                        <p:ajax event="rowSelect"
-                                listener="#{archivoCargadoFrm.seleccionarRegistro}"
-                                update=":pnlDetalle :pnlTabla"/>
+                <p:column headerText="ID">
+                    <h:outputText value="#{a.idArchivoCargado}"/>
+                </p:column>
 
-                        <p:column headerText="ID" style="width: 80px;">
-                            <h:outputText value="#{a.idArchivoCargado}"/>
-                        </p:column>
+                <p:column headerText="Nombre del Archivo">
+                    <h:outputText value="#{a.nombreArchivo}"/>
+                </p:column>
 
-                        <p:column headerText="Nombre del Archivo">
-                            <h:outputText value="#{a.nombreArchivo}"/>
-                        </p:column>
+                <p:column headerText="Fecha de Carga">
+                    <h:outputText value="#{a.fechaCarga}" converter="instantConverter"/>
+                </p:column>
 
-                        <p:column headerText="Fecha de Carga" style="width: 180px;">
-                            <h:outputText value="#{a.fechaCarga}" converter="instantConverter"/>
-                        </p:column>
+                <p:column headerText="Estado">
+                    <h:outputText value="#{a.estado}"/>
+                </p:column>
 
-                        <p:column headerText="Estado" style="width: 150px;">
-                            <h:panelGroup rendered="#{a.estado == 'PROCESADO'}">
-                                <span class="badge badge-procesado">
-                                    <i class="pi pi-check-circle"></i> Procesado
-                                </span>
-                            </h:panelGroup>
-                            <h:panelGroup rendered="#{a.estado == 'PROCESANDO'}">
-                                <span class="badge badge-procesando">
-                                    <i class="pi pi-spin pi-spinner"></i> Procesando
-                                </span>
-                            </h:panelGroup>
-                            <h:panelGroup rendered="#{a.estado == 'SIN PROCESAR'}">
-                                <span class="badge badge-pendiente">
-                                    <i class="pi pi-clock"></i> Sin Procesar
-                                </span>
-                            </h:panelGroup>
-                        </p:column>
+                <p:column headerText="Usuario">
+                    <h:outputText value="#{a.usuarioCarga}"/>
+                </p:column>
+            </p:dataTable>
 
-                        <p:column headerText="Usuario" style="width: 150px;">
-                            <h:outputText value="#{a.usuarioCarga}"/>
-                        </p:column>
-                    </p:dataTable>
-                </div>
-            </div>
+            <ues:botones-top formulario="#{archivoCargadoFrm}" actualizar=":pnlDetalle :pnlTabla"/>
 
-            <!-- Botón Nuevo -->
-            <div class="actions-toolbar">
-                <ues:botones-top formulario="#{archivoCargadoFrm}" actualizar=":pnlDetalle :pnlTabla"/>
-            </div>
         </h:form>
     </ui:define>
 
-    <!-- ===================== FORMULARIO ===================== -->
+
     <ui:define name="contenido-detalle">
-        <h:form id="frmArchivoCargado"
-                rendered="#{archivoCargadoFrm.estado != 'NADA'}"
-                enctype="multipart/form-data">
+        <!-- Form only rendered when there's a registro to edit/create to ensure bindings are writable -->
+        <h:form id="frmArchivoCargado" rendered="#{archivoCargadoFrm.estado != 'NADA' and archivoCargadoFrm.registro != null}" enctype="multipart/form-data">
+            <p:growl id="msgsDetalle" showDetail="true" life="4000"/>
 
-            <p:growl id="msgsDetalle" showDetail="true" life="4000" sticky="false"/>
+            <p:panelGrid columns="2">
+                <p:outputLabel for="txtId" value="ID:"/>
+                <p:inputText id="txtId" value="#{archivoCargadoFrm.registro.idArchivoCargado}" readonly="true" disabled="true"/>
 
-            <!-- Card del formulario -->
-            <div class="form-card-clean">
-                <!-- Header -->
-                <div class="form-header-clean">
-                    <h2>
-                        <i class="pi pi-file-edit"></i>
-                        <h:outputText value="Nuevo Archivo" rendered="#{archivoCargadoFrm.estado == 'CREAR'}"/>
-                        <h:outputText value="Editar Archivo" rendered="#{archivoCargadoFrm.estado != 'CREAR'}"/>
-                    </h2>
-                    <p class="form-subtitle-clean">Complete la información del archivo contable</p>
-                </div>
+                <p:outputLabel for="txtNombre" value="Nombre del Archivo:"/>
+                <p:inputText id="txtNombre" value="#{archivoCargadoFrm.registro.nombreArchivo}" required="true"
+                             requiredMessage="Debe ingresar un nombre de archivo."/>
 
-                <!-- Body -->
-                <div class="form-body-clean">
-                    <!-- Fila 1: ID + Nombre -->
-                    <div class="form-row">
-                        <div class="form-col">
-                            <label for="txtId" class="field-label">ID:</label>
-                            <p:inputText id="txtId"
-                                         value="#{archivoCargadoFrm.registro.idArchivoCargado}"
-                                         readonly="true"
-                                         disabled="true"
-                                         styleClass="field-input field-readonly"/>
-                        </div>
+                <p:outputLabel for="fecha" value="Fecha de Carga:"/>
+                <p:datePicker id="fecha"
+                              value="#{archivoCargadoFrm.registro.fechaCarga}"
+                              showIcon="true"
+                              showTime="true"
+                              hourFormat="24"
+                              pattern="yyyy-MM-dd HH:mm"
+                              timeZone="America/El_Salvador"
+                              converter="instantConverter"
+                              required="#{archivoCargadoFrm.estado == 'CREAR'}"
+                              requiredMessage="La fecha es obligatoria."
+                              style="width:100%;"/>
 
-                        <div class="form-col">
-                            <label for="txtNombre" class="field-label">
-                                Nombre del Archivo: <span class="required-mark">*</span>
-                            </label>
-                            <p:inputText id="txtNombre"
-                                         value="#{archivoCargadoFrm.registro.nombreArchivo}"
-                                         required="true"
-                                         requiredMessage="Debe ingresar un nombre de archivo."
-                                         placeholder="Ej: Balance_General_2025.xlsx"
-                                         styleClass="field-input"/>
-                        </div>
-                    </div>
 
-                    <!-- Fila 2: Fecha + Estado -->
-                    <div class="form-row">
-                        <div class="form-col">
-                            <label for="fecha" class="field-label">
-                                Fecha de Carga: <span class="required-mark">*</span>
-                            </label>
-                            <p:datePicker id="fecha"
-                                          value="#{archivoCargadoFrm.registro.fechaCarga}"
-                                          showIcon="true"
-                                          showTime="true"
-                                          hourFormat="24"
-                                          pattern="yyyy-MM-dd HH:mm"
-                                          timeZone="America/El_Salvador"
-                                          converter="instantConverter"
-                                          required="true"
-                                          requiredMessage="La fecha es obligatoria."
-                                          placeholder="Seleccione fecha y hora"
-                                          styleClass="field-input"/>
-                        </div>
+                <p:outputLabel for="txtEstado" value="Estado:"/>
+                <p:selectOneMenu id="txtEstado"
+                                 value="#{archivoCargadoFrm.registro.estado}">
+                    <f:selectItem itemLabel="PROCESADO" itemValue="PROCESADO"/>
+                    <f:selectItem itemLabel="PROCESANDO" itemValue="PROCESANDO"/>
+                    <f:selectItem itemLabel="SIN PROCESAR" itemValue="SIN PROCESAR"/>
+                </p:selectOneMenu>
 
-                        <div class="form-col">
-                            <label for="txtEstado" class="field-label">
-                                Estado: <span class="required-mark">*</span>
-                            </label>
-                            <p:selectOneMenu id="txtEstado"
-                                             value="#{archivoCargadoFrm.registro.estado}"
-                                             styleClass="field-select">
-                                <f:selectItem itemLabel="Seleccione un estado" itemValue="" noSelectionOption="true"/>
-                                <f:selectItem itemLabel="Procesado" itemValue="PROCESADO"/>
-                                <f:selectItem itemLabel="Procesando" itemValue="PROCESANDO"/>
-                                <f:selectItem itemLabel="Sin Procesar" itemValue="SIN PROCESAR"/>
-                            </p:selectOneMenu>
-                        </div>
-                    </div>
 
-                    <!-- Fila 3: Usuario + Archivo -->
-                    <div class="form-row">
-                        <div class="form-col">
-                            <label for="txtUsuario" class="field-label">
-                                Usuario: <span class="required-mark">*</span>
-                            </label>
-                            <p:inputText id="txtUsuario"
-                                         value="#{archivoCargadoFrm.registro.usuarioCarga}"
-                                         required="true"
-                                         requiredMessage="Ingrese el nombre del usuario."
-                                         placeholder="Nombre del usuario"
-                                         styleClass="field-input"/>
-                        </div>
+                <p:outputLabel for="txtUsuario" value="Usuario:"/>
+                <p:inputText id="txtUsuario" value="#{archivoCargadoFrm.registro.usuarioCarga}" required="true"
+                              requiredMessage="Ingrese el nombre del usuario."/>
 
-                        <div class="form-col">
-                            <label for="file" class="field-label">
-                                Seleccionar Archivo Excel: <span class="required-mark">*</span>
-                            </label>
+                <p:outputLabel for="file" value="Seleccionar Archivo Excel:"/>
+                <p:fileUpload id="file"
+                              value="#{archivoCargadoFrm.archivo}"
+                              mode="simple"
+                              label="Seleccionar archivo"
+                              skinSimple="true"
+                              required="#{archivoCargadoFrm.estado == 'CREAR'}"
+                              requiredMessage="Debe seleccionar un archivo."/>
 
-                            <!-- FileUpload con label correcto -->
-                            <p:fileUpload id="file"
-                                          value="#{archivoCargadoFrm.archivo}"
-                                          mode="simple"
-                                          label="Seleccionar Archivo Excel"
-                                          chooseLabel="Seleccionar Archivo Excel"
-                                          skinSimple="true"
-                                          required="#{archivoCargadoFrm.estado == 'CREAR'}"
-                                          requiredMessage="Debe seleccionar un archivo."
-                                          accept=".xlsx,.xls"
-                                          style="width: 100%;"/>
 
-                            <div class="file-hint-box">
-                                <i class="pi pi-info-circle"></i>
-                                Formatos permitidos: .xlsx, .xls (máximo 10MB)
-                            </div>
-                        </div>
-                    </div>
+            </p:panelGrid>
 
-                    <!-- Botones -->
-                    <div class="form-actions-clean">
-                        <p:commandButton value="Subir Archivo"
-                                         icon="pi pi-upload"
-                                         actionListener="#{archivoCargadoFrm.subirArchivo}"
-                                         update=":pnlTabla :frmArchivoCargado"
-                                         ajax="false"
-                                         styleClass="btn-submit"
-                                         rendered="#{archivoCargadoFrm.estado == 'CREAR'}"/>
+            <ues:botones-crud formulario="#{archivoCargadoFrm}" actualizar=":pnlDetalle :pnlTabla"/>
 
-                        <ues:botones-crud formulario="#{archivoCargadoFrm}" actualizar=":pnlDetalle :pnlTabla"/>
-                    </div>
-                </div>
-            </div>
         </h:form>
     </ui:define>
 </ui:composition>
