Vista de transacciones, enlace con archivo cargado segundo tab por terminar

--- a/src/main/webapp/paginas/Transaccion.xhtml
+++ b/src/main/webapp/paginas/Transaccion.xhtml
@@ -7,37 +7,40 @@
         xmlns:ues="jakarta.faces.composite/ues"
         template="/WEB-INF/plantilla/default.xhtml">
 
+    <!-- recibe el parametro-->
+    <f:metadata>
+        <f:viewParam name="archivoId" value="#{transaccionFrm.idArchivoSeleccionado}" />
+        <f:viewAction action="#{transaccionFrm.cargarTransaccionesDelArchivo}" />
+    </f:metadata>
+
     <ui:define name="header">
         <h1>Gestión de Transacciones</h1>
     </ui:define>
 
-    <!-- tabla -->
+    <!-- tabla de transaccions-->
     <ui:define name="contenido-tabla">
-        <h:form id="frmTablaTransacciones">
-            <p:growl id="msgsTabla" showDetail="true" life="3000"/>
+        <h:panelGrid>
+            <h:form id="frmTablaTransacciones">
 
-
-            <p:panel id="pnlTablaTransaccion">
-
-                <p:dataTable id="tablaTransacciones"
+                <p:dataTable lazy="true"
+                             rendered="#{transaccionFrm.estado == 'NADA'}"
+                             rows="10"
+                             paginator="true"
+                             paginatorPosition="bottom"
                              value="#{transaccionFrm.modelo}"
                              var="t"
-                             paginator="true"
-                             rows="8"
-                             rendered="#{transaccionFrm.estado == 'NADA'}"
                              selectionMode="single"
                              selection="#{transaccionFrm.registro}"
-                             rowKey="#{t.id}"
-                             paginatorPosition="bottom"
-                             emptyMessage="No hay transacciones registradas."
                              styleClass="tabla-crud">
 
                     <p:ajax event="rowSelect"
                             listener="#{transaccionFrm.seleccionarRegistro}"
-                            update=":frmDetalle :pnlTabla"/>
+                            update=":pnlDetalle :pnlTabla"/>
 
                     <p:column headerText="Fecha">
-                        <h:outputText value="#{t.fecha}"/>
+                        <h:outputText value="#{t.fecha}">
+                            <f:convertDateTime pattern="dd/MM/yyyy" />
+                        </h:outputText>
                     </p:column>
 
                     <p:column headerText="Descripción">
@@ -45,70 +48,138 @@
                     </p:column>
 
                     <p:column headerText="Monto">
-                        <h:outputText value="#{t.monto}"/>
+                        <h:outputText value="$#{t.monto}"/>
                     </p:column>
 
                     <p:column headerText="Moneda">
                         <h:outputText value="#{t.moneda}"/>
                     </p:column>
 
-                    <!-- archivoCargado -->
-                    <p:column headerText="Archivo Origen">
-                        <h:outputText value="#{t.archivoCargado != null ? t.archivoCargado.nombreArchivo : '—'}"/>
-                    </p:column>
                 </p:dataTable>
 
                 <ues:botones-top formulario="#{transaccionFrm}" actualizar=":pnlDetalle :pnlTabla"/>
 
-            </p:panel>
-        </h:form>
+            </h:form>
+        </h:panelGrid>
     </ui:define>
 
-    <!-- detalle -->
+    <!-- detalle de la transaccion -->
     <ui:define name="contenido-detalle">
-        <h:form id="frmDetalle" rendered="#{transaccionFrm.estado != 'NADA'}" enctype="multipart/form-data">
-            <p:growl id="msgsDetalle" showDetail="true" life="4000"/>
 
-            <p:panel id="pnlDetalleTransaccion" header="Datos de la Transacción">
+        <p:tabView id="tabTransaccion"
+                   cache="false"
+                   dynamic="true"
+                   rendered="#{transaccionFrm.estado != 'NADA'}">
 
-                <p:panelGrid columns="2">
-                    <h:outputLabel value="ID:"/>
-                    <p:inputText value="#{transaccionFrm.registro.id}" readonly="true" disable="true"/>
+            <p:tab closable="false" title="Detalle de transacción">
 
-                    <h:outputLabel value="Fecha:"/>
-                    <p:datePicker value="#{transaccionFrm.registro.fecha}"
-                                  pattern="yyyy-MM-dd"
-                                  showIcon="true"
-                                  required="true"/>
+                <h:panelGroup id="pnlTransaccionWrapper">
+                    <h:form id="frmTransaccionCrear">
 
-                    <h:outputLabel value="Descripción:"/>
-                    <p:inputTextarea value="#{transaccionFrm.registro.descripcion}"
-                                     rows="3" cols="30"
-                                     required="true"
-                                     requiredMessage="Ingrese una descripción."/>
+                        <h:panelGrid columns="2">
 
-                    <h:outputLabel value="Monto:"/>
-                    <p:inputNumber value="#{transaccionFrm.registro.monto}"
-                                   symbol="$"
-                                   symbolPosition="p"
-                                   required="true"/>
+                            <p:outputLabel for="txtIdTrans" value="ID:"/>
+                            <p:inputText id="txtIdTrans"
+                                         value="#{transaccionFrm.registro.id}"
+                                         readonly="true"
+                                         disabled="true"/>
 
-                    <h:outputLabel value="Moneda:"/>
-                    <p:selectOneMenu value="#{transaccionFrm.registro.moneda}">
-                        <f:selectItem itemLabel="USD" itemValue="USD"/>
-                    </p:selectOneMenu>
+                            <p:outputLabel for="dpFechaTrans" value="Fecha:"/>
+                            <p:datePicker id="dpFechaTrans"
+                                          value="#{transaccionFrm.registro.fecha}"
+                                          pattern="yyyy-MM-dd"
+                                          required="true"
+                                          showIcon="true"
+                                          touchUI="false"/>
 
-                    <!-- muestra el archivo cargado de donde proviene la transaccion -->
-                    <h:outputLabel value="Archivo Origen:"/>
-                    <p:inputText value="#{transaccionFrm.registro.archivoCargado != null ? transaccionFrm.registro.archivoCargado.nombreArchivo : ''}"
-                                 readonly="true"/>
+                            <p:outputLabel for="txtDescripcion" value="Descripción:"/>
+                            <p:inputTextarea id="txtDescripcion"
+                                             value="#{transaccionFrm.registro.descripcion}"
+                                             rows="3" cols="30"
+                                             required="true"
+                                             requiredMessage="La descripción es obligatoria."/>
 
-                </p:panelGrid>
-            </p:panel>
-            <br/>
+                            <p:outputLabel for="txtMonto" value="Monto:"/>
+                            <p:inputNumber id="txtMonto"
+                                           value="#{transaccionFrm.registro.monto}"
+                                           symbol="$"
+                                           required="true"/>
 
-            <ues:botones-crud
-                    formulario="#{transaccionFrm}" actualizar=":pnlDetalle :pnlTabla"/>
-        </h:form>
+                            <p:outputLabel for="cmbMoneda" value="Moneda:"/>
+                            <p:selectOneMenu id="cmbMoneda"
+                                             value="#{transaccionFrm.registro.moneda}">
+                                <f:selectItem itemLabel="USD" itemValue="USD"/>
+                            </p:selectOneMenu>
+
+                        </h:panelGrid>
+
+                        <ues:botones-crud
+                                formulario="#{transaccionFrm}"
+                                actualizar=":pnlTabla :tabTransaccion"/>
+
+                    </h:form>
+                </h:panelGroup>
+
+            </p:tab>
+
+            <!-- clasificacion cuenta contable -->
+            <p:tab  closable="false" title="Clasificación Contable" disabled="#{transaccionFrm.estado != 'MODIFICAR'}">
+
+                <h:form id="frmClasificacion">
+                    <!-- transaccion seleccionada-->
+                    <p:panel header="Transacción Seleccionada">
+                        <h:panelGrid columns="2">
+
+                            <h:outputLabel value="ID Transacción:"/>
+                            <h:outputText value="#{transaccionFrm.registro.id}"/>
+
+                            <h:outputLabel value="Descripción:"/>
+                            <h:outputText value="#{transaccionFrm.registro.descripcion}"/>
+
+                            <h:outputLabel value="Monto:"/>
+                            <h:outputText value="$#{transaccionFrm.registro.monto}"/>
+
+                            <h:outputLabel value="Moneda:"/>
+                            <h:outputText value="#{transaccionFrm.registro.moneda}"/>
+
+
+                        </h:panelGrid>
+                    </p:panel>
+
+                    <br/>
+
+                    <!-- ===== hasta aqui revisado  ===== -->
+                    <p:panel header="Clasificación contable">
+
+                        <p:panelGrid columns="2">
+
+                            <!-- Tipo de transacción -->
+                            <h:outputLabel value="Tipo de transacción:"/>
+
+                            <!-- Categoría -->
+                            <h:outputLabel value="Categoría:"/>
+
+                            <!-- Cuenta debe -->
+                            <h:outputLabel value="Cuenta contable - Debe:"/>
+
+                            <!-- Cuenta haber -->
+                            <h:outputLabel value="Cuenta contable - Haber:"/>
+
+
+
+                        </p:panelGrid>
+
+                    </p:panel>
+
+                </h:form>
+
+            </p:tab>
+
+
+
+
+        </p:tabView>
+
     </ui:define>
+
 </ui:composition>
