--- a/src/main/webapp/paginas/Transaccion.xhtml
+++ b/src/main/webapp/paginas/Transaccion.xhtml
@@ -8,8 +8,8 @@
         template="/WEB-INF/plantilla/default.xhtml">
 
     <f:metadata>
-        <f:viewParam name="archivoId" value="#{transaccionFrm.idArchivoSeleccionado}" />
-        <f:viewAction action="#{transaccionFrm.cargarTransaccionesDelArchivo}" />
+        <f:viewParam name="archivoId" value="#{transaccionFrm.idArchivoSeleccionado}"/>
+        <f:viewAction action="#{transaccionFrm.cargarTransaccionesDelArchivo}"/>
     </f:metadata>
 
     <ui:define name="header">
@@ -39,7 +39,7 @@
 
                     <p:column headerText="Fecha">
                         <h:outputText value="#{t.fecha}">
-                            <f:convertDateTime pattern="dd/MM/yyyy" />
+                            <f:convertDateTime pattern="dd/MM/yyyy"/>
                         </h:outputText>
                     </p:column>
 
@@ -124,34 +124,157 @@
             <!-- clasificacion -->
             <p:tab title="Clasificación Contable"
                    disabled="#{transaccionFrm.estado != 'MODIFICAR'}">
+                <h:panelGrid>
+                    <h:panelGroup id="pnlClasificacion">
+                        <h:form id="frmClasificacion">
+                            <h:outputLabel value="Tipo Transaccion: "/>
+                            <h:outputText value="#{transaccionClasificacionFrm.registro.tipoTransaccion}"/>
 
-                <h:form id="frmClasificacion">
+                            <h:outputLabel value="Nombre de Catergoria: "/>
+                            <h:outputText value="#{transaccionClasificacionFrm.registro.categoriaId.nombre}"/>
 
-                    <p:panel header="Transacción Seleccionada">
+                            <h:outputLabel value="Descripsion de Catergoria: "/>
+                            <h:outputText value="#{transaccionClasificacionFrm.registro.categoriaId.descripcion}"/>
 
-                        <h:panelGrid columns="2" cellpadding="5">
 
-                            <h:outputLabel value="Fecha:" />
-                            <h:outputText value="#{transaccionFrm.registro.fecha}">
-                                <f:convertDateTime pattern="dd/MM/yyyy"/>
-                            </h:outputText>
+                            <p:column headerText="Naturaleza de la cuenta" />
+                            <h:panelGrid columns="2">
+                                <h:panelGrid>
+                                    <h2>Cuenta Contable Debe</h2>
+                                    <p:column headerText="Nombre de Cuenta: "/>
+                                    <h:outputText
+                                            value="#{transaccionClasificacionFrm.registro.cuentaContableDebeId.nombre}"/>
 
-                            <h:outputLabel value="Descripción:" />
-                            <h:outputText value="#{transaccionFrm.registro.descripcion}" />
+                                    <p:column headerText="Codigo de Cuenta: "/>
+                                    <h:outputText
+                                            value="#{transaccionClasificacionFrm.registro.cuentaContableDebeId.codigo}"/>
 
-                            <h:outputLabel value="Monto:" />
-                            <h:outputText value="$#{transaccionFrm.registro.monto}" />
+                                    <p:column headerText="Codigo de Descripcion: "/>
+                                    <h:outputText
+                                            value="#{transaccionClasificacionFrm.registro.cuentaContableDebeId.codigo}"/>
+                                </h:panelGrid>
 
-                            <h:outputLabel value="Moneda:" />
-                            <h:outputText value="#{transaccionFrm.registro.moneda}" />
+                                <h:panelGrid>
+                                    <h2>Cuenta Contable Haber</h2>
+                                    <p:column headerText="Nombre de Cuenta: "/>
+                                    <h:outputText
+                                            value="#{transaccionClasificacionFrm.registro.cuentaContableDebeId.nombre}"/>
+
+                                    <p:column headerText="Codigo de Cuenta: "/>
+                                    <h:outputText
+                                            value="#{transaccionClasificacionFrm.registro.cuentaContableDebeId.codigo}"/>
+
+                                    <p:column headerText="Codigo de Descripcion: "/>
+                                    <h:outputText
+                                            value="#{transaccionClasificacionFrm.registro.cuentaContableDebeId.codigo}"/>
+                                </h:panelGrid>
+                            </h:panelGrid>
+
+                            <p:commandButton
+                            boton para editar clasificacion
+                            />
+
+                        </h:form>
+                    </h:panelGroup>
+
+
+                    <h:panelGroup id="pnlTransaccionClasificacion">
+                        <p:growl/>
+                        <p:growl/>
+
+                        <h:panelGrid rendered="#{}">
+                            <h:form id="frmDetalleClasificacion">
+                                <p:panel header="Transacción Seleccionada">
+                                    <h:panelGrid columns="2" cellpadding="5">
+
+                                        <p:outputLabel for="txtId" value="ID:"/>
+                                        <p:inputText id="txtId" value="#{transaccionClasificacionFrm.registro.id}"
+                                                     readonly="true"
+                                                     disabled="true"/>
+
+                                        <p:outputLabel for="txtTipoTransaccion" value="Tipo Transaccion:"/>
+                                        <p:inputText id="txtTipoTransaccion"
+                                                     value="#{transaccionClasificacionFrm.registro.tipoTransaccion}"
+                                                     size="75"
+                                                     required="true"/>
+
+                                        <p:outputLabel for="acCategoria" value="Categoria :"/>
+                                        <h:panelGrid>
+                                            <h:panelGrid columns="2">
+                                                <p:outputLabel value="Seleccione la categoria: "
+                                                               for="acCategoria"/>
+                                                <p:autoComplete id="acCategoria"
+                                                                value="#{}"
+                                                                completeMethod="#{}"
+                                                                var=""
+                                                                converter=""
+                                                                itemLabel="#{}"
+                                                                itemValue="#{}"
+                                                                forceSelection="true"
+                                                                dropdown="true"
+                                                                size="40"
+                                                                placeholder="Ingrese el nombre de la caracteristica"
+                                                                emptyMessage="No se encontraron caracteristica con ese nombre"
+
+                                                />
+                                            </h:panelGrid>
+                                            <p:commandButton value="" type="button"
+                                                             process="@form"
+                                                             actionListener="#{}"
+                                                             update=""
+                                            />
+                                        </h:panelGrid>
+
+
+                                        <p:outputLabel for="acNombre" value="Nombre de Cuenta :"/>
+                                        <h:panelGrid>
+                                            <h:panelGrid columns="2">
+                                                <p:outputLabel value="Seleccione la cuenta: "
+                                                               for="acNombre"/>
+                                                <p:autoComplete id="acNombre"
+                                                                value="#{}"
+                                                                completeMethod="#{}"
+                                                                var=""
+                                                                converter=""
+                                                                itemLabel="#{}"
+                                                                itemValue="#{}"
+                                                                forceSelection="true"
+                                                                dropdown="true"
+                                                                size="40"
+                                                                placeholder="Ingrese el nombre de la cuenta"
+                                                                emptyMessage="No se encontraron cuentas con ese nombre"
+
+                                                />
+                                            </h:panelGrid>
+                                            <p:commandButton value="" type="button"
+                                                             process="@form"
+                                                             actionListener="#{}"
+                                                             update=""
+                                            />
+                                        </h:panelGrid>
+
+                                        <p:outputLabel for="chkActivo" value="Activo:"/>
+                                        <p:selectBooleanCheckbox id="chkActivo" value="#{productoFrm.registro.activo}"/>
+                                        <p:outputLabel for="txtObservacion" value="Comentarios:"/>
+
+                                        <p:inputTextarea id="txtObservacion" value="#{productoFrm.registro.comentarios}"
+                                                         cols="75"
+                                                         rows="4"/>
+
+
+                                    </h:panelGrid>
+
+                                    <ues:botones-crud formulario="#{transaccionFrm.}"
+
+                                </p:panel>
+
+                            </h:form>
 
                         </h:panelGrid>
 
-                    </p:panel>
+                    </h:panelGroup>
 
-
-
-                </h:form>
+                </h:panelGrid>
 
             </p:tab>
 
